fix linjewrap av heading i modaler

--- a/src/component/felles/base-modal/BaseModal.module.scss
+++ b/src/component/felles/base-modal/BaseModal.module.scss
@@ -5,3 +5,8 @@
 .content > *:not(:last-child){
   margin-bottom: 1rem;
 }
+
+.modalHeader{
+  white-space: nowrap;
+  margin-right: 3rem;
+}
